<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.workoutapp2.area.Client.chucNang.PersonalInformation.FragmentClientBodyInfo">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/trainning_information"
            android:textColor="#000000"
            android:textSize="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtHeight"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="51dp"
            android:ems="10"
            android:hint="@string/height_cm"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

        <EditText
            android:id="@+id/txtMaxRepPushUp"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/max_rep_push_up"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWeight" />

        <EditText
            android:id="@+id/txtMaxRepPullUp"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/max_rep_pull_up"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMaxRepPushUp" />

        <EditText
            android:id="@+id/txtMaxRepSquats"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/max_rep_squats"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMaxRepPullUp" />

        <Spinner
            android:id="@+id/spMucDichTap"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMaxRepSquats" />

        <Spinner
            android:id="@+id/spLevel"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spMucDichTap" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:text="@string/goal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/spMucDichTap"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:text="@string/level"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/spLevel"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:text="@string/save"
            android:topLeftRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spLevel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>